--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+v0.95   Mon Nov  8 20:48:59 CST 2004
+        - fixed writing to log file in example/convert.pl
+
 v0.9    Sat Nov  6 14:21:03 CST 2004
         - fixed counting for linked field
 
