--- a/Changes
+++ b/Changes
@@ -1,3 +1,16 @@
+v0.99   Tue Nov 16 22:47:16 CST 2004
+        - added 'records written' to log
+        - MARC::Detrans::convert() can return undef when a bad error
+          has ocurred or when the record is not edited.
+        - added translation and parallel title log tallies
+        - added new russian config file
+        - added test of record skipping when target script is already
+          present in the record (t/scriptpresent.t)
+        - added the creation of a 940 tag to convert.pl
+
+v0.98   Sun Nov 14 19:48:05 CST 2004
+        - added 001 to log messages
+
 v0.97   Tue Nov  9 21:37:20 CST 2004
         - don't include $c(B in 066
 
