Import of ESUMMERS/MARC-Detrans-1.3 from CPAN.
gitpan-cpan-distribution: MARC-Detrans
gitpan-cpan-version:      1.3
gitpan-cpan-path:         ESUMMERS/MARC-Detrans-1.3.tar.gz
gitpan-cpan-author:       ESUMMERS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+v1.3    Tue Dec 20 12:07:56 CST 2005
+        - added urdu.xml from Jane Jacobs at Queens Borough Public Library
+
 v1.2    Mon May  2 15:51:16 CDT 2005
         - added new example configuration files
 
